PDF input/output: add file extensions

--- a/PDF/forMMC-02.24.2022_66.html
+++ b/PDF/forMMC-02.24.2022_66.html
@@ -9,23 +9,20 @@
 </head>
 
 <h3 id="formmc-02-24-2022-66">forMMC 02.24.2022 #66</h3>
-<h2 id="new-items">New Items</h2>
 <h2 id="questions-change-requests">Questions / Change Requests</h2>
 <p>Studio #28</p>
 <blockquote>
 <p>Laura wants the Studio walls to be more open.</p>
 </blockquote>
-<p>Drop Zone: Are those cubbies behind the door in the drop zone? #33</p>
-<p>triangular cabinet spaces next to sink #34</p>
+<p>Drop Zone #33</p>
+<blockquote>
+<p>Are those cubbies behind the door in the drop zone?
+Do we need the details of this space before we sign the contract?</p>
+</blockquote>
+<p>Triangular cabinet spaces next to sink #34</p>
 <blockquote>
 <p>Will those be conveniently accessible from the under-sink cabinet?
 Could they be accessible from the other side of the counter?</p>
-</blockquote>
-<p>Windows #38</p>
-<blockquote>
-<p>Master: We expect to put the head of the bed on the west wall, which I expect will affect where the windows go.
-Laura: bigger window in front; two high windows on east side
-General: We want to review window plans sometime. When is the time for that?</p>
 </blockquote>
 <p>Reading Nook under Stairs #32</p>
 <blockquote>
@@ -40,7 +37,7 @@ General: We want to review window plans sometime. When is the time for that?</p>
 <blockquote>
 <p>Could there be a landing on the stairs down at the spa?
 Would it help light and circulation to extend the porch floor out past the house?
-Could we extend the concrete pad out to provide for spa. (BB goal? Outside table? ...)
+Is there a concrete pad under the deck? Could we extend it out to provide for spa. (BB goal? Outside table? ...)
 Is there a path to the patio?
 What is patio &#39;ceiling height&#39;?
 Is patio where the spa should go?
@@ -53,7 +50,6 @@ We do want access from the living room to the porch, whether or not accessible t
 We are interested in doors as easy to open as possible, but Carol still has the option to use the DR door.</p>
 </blockquote>
 <h2 id="cost-wishlist-questions">Cost / Wishlist Questions</h2>
-<p><em>Until we&#39;ve started to narrow this down, we could start with approximations.</em></p>
 <p>Front Porch #24</p>
 <blockquote>
 <p>Shane said $10,000 for something, but was that for: bringing stoop inside entryway; front porch; or both?
@@ -71,12 +67,6 @@ In any case, we want to consider adding a Front Porch.</p>
 <blockquote>
 <p>Door from Master Bedroom onto porch</p>
 </blockquote>
-<p>Screen/Storm doors #53</p>
-<blockquote>
-<p>We would link combination screen/storm doors at the front door, probably the porch/DR door, and from the Master Bedroom if that door happens.</p>
-</blockquote>
-<p>Ceiling Fans #14</p>
-<p>Covered Gutters #48</p>
 <p>Dining Room Builtin similar to this one #16</p>
 <blockquote>
 <p>This photo is a builtin from the plan (2525) that we first showed Shane.
@@ -88,11 +78,27 @@ In any case, we want to consider adding a Front Porch.</p>
 <p>like this one that Shane sketched
 <img src="https://images.zenhubusercontent.com/5ed6c1883e845f0e8524b13f/b8a91b47-b002-4acc-adee-8413c06e417f" alt="BayWindow_sketch.png"></p>
 </blockquote>
+<p>Wired Intercom #60</p>
+<h2 id="later-in-process-">Later in Process?</h2>
+<p>Windows #38</p>
+<blockquote>
+<p>Master: We expect to put the head of the bed on the west wall, which I expect will affect where the windows go.<br>
+Laura: bigger window in front; two high windows on east side<br>
+General: We want to review window plans sometime. When is the time for that?</p>
+</blockquote>
+<p>Screen/Storm doors #53</p>
+<blockquote>
+<p>We would link combination screen/storm doors at the front door, probably the porch/DR door, and from the Master Bedroom if that door happens.</p>
+</blockquote>
+<p>Ceiling Fans #14</p>
+<p>Heat Fans in Baths #59</p>
 <p>Data/Wifi #56</p>
 <blockquote>
 <p>data and wifi connectors</p>
 </blockquote>
-<p>May Drop Fireplace #10</p>
+<p>Covered Gutters #48</p>
+<p>Fireplace #10</p>
 <blockquote>
 <p>We have the fireplace cost from the original estimate as $2250. We may consider dropping it in favor of other items on this list.</p>
 </blockquote>
+<p>Screen/combo doors? #53</p>
