--- a/html/AtomKeys_personal.html
+++ b/html/AtomKeys_personal.html
@@ -363,4 +363,5 @@
 <td>⌘ + Option + ]</td>
 <td>Unfold all code</td>
 </tr>
+<p>This file is labelled as "Personal" because the code is copyright by <a href="https://www.makeuseof.com/">Make Use Of</a>. We will soon build our own keymap.</p>
 </tbody></table>
