--- a/TechDocs/WebTmp/index.html
+++ b/TechDocs/WebTmp/index.html
@@ -1,30 +1,31 @@
 <!doctype html>
 
 <html>
-    <head>
-        <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8">
 
-        <title>cebcar</title>
+    <title>cebcar</title>
 
-        <!-- Load external CSS styles -->
-        <link rel="stylesheet" href="styles.css">
+    <!-- Load external CSS styles -->
+    <link rel="stylesheet" href="styles.css">
 
-    </head>
+  </head>
 
-    <body>
+  <body>
 
-<h1>cebcar</h1>
-<h3>Workflows</h3>
+    <h1>cebcar</h1>
+      <p><a href="./README.md">README</a></p>
+    <br>
 
-<h3>Keymaps</h3>
+    <h3>Workflows</h3>
+    <br>
 
+    <h3>Keymaps</h3>
+    <br>
 
-<li><a href="./README.md">README</a></li>
-</ul>
+    <!-- Load external JavaScript -->
+    <script src="scripts.js"></script>
 
-        <!-- Load external JavaScript -->
-        <script src="scripts.js"></script>
-
-    </body>
+  </body>
 
 </html>
