FeatureBWF: reformat instructions after brackets

--- a/TechDocs/WebTmp/workflows/Feature-Branch-Workflow.html
+++ b/TechDocs/WebTmp/workflows/Feature-Branch-Workflow.html
@@ -30,11 +30,10 @@
 <li>show staged changes</li>
 </ul>
 </li>
-<li>} <strong>commit</strong>: verify target branch; commit changes</li>
+<li>} <strong>commit |</strong> verify target branch; commit changes<br><br></li>
 </ul>
 </li>
-<li><p>} <strong>push branch</strong>
-<br/><br/></p>
+<li><p>} <strong>push branch |</strong> on &lt;wb&gt;: <code>git push</code><br/><br/></p>
 </li>
 </ul>
 </li>
@@ -42,15 +41,12 @@
 <li>} <strong>merge to <code>main</code></strong> <em>merge &lt;wb&gt; into main line of development</em><ul>
 <li>checkout &lt;wb&gt;; <code>gsb</code>: review repo, branches, status</li>
 <li><em>preview merge</em>: <code>difftool main</code></li>
-<li><code>checkout main; merge --edit --no-ff &lt;wb&gt;</code><br><br></li>
 </ul>
 </li>
-<li>} <strong>merge</strong></li>
+<li>} <strong>merge |</strong> <code>checkout main; merge --edit --no-ff &lt;wb&gt;</code><br><br></li>
 </ul>
 </li>
-<li>} <strong>push main</strong><ul>
-<li>push main<br><br></li>
-</ul>
+<li><p>} <strong>push main |</strong> on <code>main</code>: <code>git push</code><br><br></p>
 </li>
 </ul>
 </li>
